--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,10 @@
     "angular-translate": "^2.11.0",
     "angular-bootstrap": "^1.3.1",
     "angular-ui-bootstrap": "^1.3.2",
-    "angular-ui-select": "^0.19.6"
+    "angular-ui-select": "^0.19.6",
+    "ng-lodash": "^0.5.0",
+    "ng-intl-tel-input": "^2.0.0",
+    "angularjs-dropdown-multiselect": "^1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
